Changelog
=========

1.5.4 (unreleased)
------------------

- Fix html structure of search in current folder. input in a tag is not allowed.
  [mathias.leimgruber]


1.5.3 (2016-05-23)
------------------

- BugFix: Search for "current folder". Label was some kind of unclickable. :-( omg sry.
  [mathias.leimgruber]


1.5.2 (2016-05-20)
------------------

- BugFix: Search for "current folder". Checkbox was unclickable.
  [mathias.leimgruber]

- Disable special links on facets dropdown.
  [Kevin Bieri]


1.5.1 (2016-04-29)
------------------

- Fix faulty upgrade step which removed the Solr connection manager utility
  in 1.5.0.
  [mbaechtold]

- Respect the facets configured in the Solr control panel.
  [mbaechtold]


1.5.0 (2016-03-31)
------------------

- Fix css selector of selected facest.
  [mathias.leimgruber]

- Implement accessible remove facet link.
  [mathias.leimgruber]

- Implement accessibility support for solr facets.
  [Kevin Bieri]

- Make `only in current folder section` selectable in the dropdown menu.
  [Kevin Bieri]

- Adjust stylings for the new ftw.theming.
  [elioschmutz]

- Do not reset the page title on facette search.
  [mathias.leimgruber]

- Use a different request handler for the livesearch.
  [buchi]

- Implement a new livesearch based on jquery autocomplete widget.
  [mathias.leimgruber]

- Moved atomic update feature to collective.solr.
  [mathias.leimgruber]


1.4.4 (2015-12-23)
------------------

- Add English, French and Italian translation of the time range facets (and
  a selection of other message ids).
  [mbaechtold]


1.4.3 (2015-08-11)
------------------

- Fix display of results when the search returns Brains and not Solr flares.
  This fixes searches which don't include searchableText.
  [tschanzt]


1.4.2 (2015-04-24)
------------------

- Fix quoting of searchterm url parameter in search result links.
  [buchi]


1.4.1 (2015-03-25)
------------------

- Allow dots in simple terms / simple searches.