@@ -5,6 +5,7 @@
     xmlns:five="http://namespaces.zope.org/five"
     xmlns:i18n="http://namespaces.zope.org/i18n"
     xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
+    xmlns:plone="http://namespaces.plone.org/plone"
     xmlns:zcml="http://namespaces.zope.org/zcml"
     i18n_domain="ftw.solr">
 
@@ -46,5 +47,16 @@
         />
 
     <include package=".upgrades" />
+
+    <configure zcml:condition="installed plone.app.dexterity">
+        <include package="plone.behavior" file="meta.zcml" />
+
+        <plone:behavior
+            title="Show In Search"
+            provides="ftw.solr.behaviors.IShowInSearch"
+            for="*"
+            />
+
+    </configure>
 
 </configure>
